--- a/proj/css/style.css
+++ b/proj/css/style.css
@@ -347,7 +347,9 @@ header{
   width: 100%;
   max-width: 400px;
   padding-top: 20px;
+  word-wrap: break-word;
 }
+
 input {
   padding: var(--padding);
   border: 2px solid gray;
