--- a/proj/css/style3.css
+++ b/proj/css/style3.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: -20px 0 50px;
-		margin-top: 20px;
+	margin-top: 20px;
 }
 
 h1 {
@@ -119,7 +119,25 @@ a {
 .btn:hover{
   opacity: 0.7;
 }
-
+.field .btn-2 {
+    border-radius: 20px;
+    background: #0c3666;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    width: 130px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: opacity 0.2s ease;
+    cursor: pointer;
+}
+  
+.btn-2:hover{
+    opacity: 0.7;
+}
+form .forgot:hover{
+    text-decoration: underline;
+}
 .social-container {
     margin: 20px 0;
 }
