--- a/proj/css/style4.css
+++ b/proj/css/style4.css
@@ -91,6 +91,7 @@ html, body{
 .fa-graduation-cap{margin-left: 15px;}
 .fa-square-plus{margin-left: 15px;}
 .fa-list-check{margin-left: 15px;}
+.fa-handshake{margin-left: 15px;}
   
   /* On mouse-over */
 .dropdown-btn:hover {
@@ -283,7 +284,7 @@ input:is(:focus, :valid) + .placeholder {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 350px;
-  height: 200px;
+  height: 230px;
   border-radius: 5px;
   position: relative;
   overflow: hidden;
@@ -345,6 +346,10 @@ input:is(:focus, :valid) + .placeholder {
 }
 .fa-arrow-up-from-bracket{color: black; font-size: 20px; position: absolute; cursor: pointer; transition: all 100ms ease-in-out;}
 .fa-arrow-up-from-bracket:hover{font-size: 25px;}
+.fa-file-import{color: black; font-size: 20px; position: absolute; margin-top: 25px; left: 60%; cursor: pointer; transition: all 100ms ease-in-out;}
+.fa-file-import:hover{font-size: 25px;}
+.fa-share-from-square{color: black; font-size: 20px; position: absolute; margin-top: 30px; margin-left: 10px; cursor: pointer; transition: all 100ms ease-in-out;}
+.fa-share-from-square:hover{font-size: 25px;}
 
 .input-container .btn-2{
   border-radius: 35px;
@@ -420,6 +425,7 @@ input:is(:focus, :valid) + .placeholder {
   margin-left: 15px;
 }
 .upload form{
+  width: 600px;
   height: 100%;
 }
 .upload form .select{
@@ -476,12 +482,11 @@ input:is(:focus, :valid) + .placeholder {
   margin-right: 10px;
   vertical-align: top;
 }
-
-.mod-container .label {
+.mod-container .labelz {
   display: inline-block;
   width: 100%;
   text-align: left;
-  margin-left: 35px;
+  margin-left: 55px;
   vertical-align: top;
 }
 
@@ -595,4 +600,96 @@ input:is(:focus, :valid) + .placeholder {
 
 .view-pdf-link:hover {
   text-decoration: underline;
+}
+.view-pdf-link-2 {
+  font-size: 14px;
+  width: 100px;
+  color: #0077cc;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: auto;
+}
+
+.view-pdf-link-2:hover {
+  text-decoration: underline;
+}
+/* table*/
+.input-container {
+  display: table-cell;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: row;
+}
+
+.marks {
+  width: 50px;
+  margin-left: 5px;
+}
+.go{
+  border-radius: 30px;
+  background: #0c3666;
+  position: absolute;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  width: 50px;
+  height: 30px;
+  margin-left: 70px;
+  margin-right: -30px;
+  margin-top: -25px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: opacity 0.2s ease;
+  cursor: pointer;
+}
+.go:hover{
+  opacity: 0.7;
+}
+
+/*monitoring*/
+.table .forms{
+  width: 0px;
+  height: 0px;
+  border: none;
+}
+.table .forms .subject{
+  position: absolute;
+  margin-top: -40px;
+} 
+.table .forms .subject .select{
+  height: 30px;
+} 
+.table .forms .field{
+  position: absolute;
+  margin-top: -33px;
+  margin-left: 300px;
+
+} 
+.table .forms .field input{
+  width: 100px;
+  height: 30px;
+} 
+
+.button{
+  width: 100px;
+  height: 30px;
+  margin-top: 10px;
+  margin-left: -70px;
+  position: absolute;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.2s ease;
+  background: #0c3666;
+  color: white;
+  cursor: pointer; 
+}
+.button:hover{
+  background: white;
+  color: black;
+  border: 2px solid #0c3666;
+}
+
+.body-section .class{
+  height: 350px;
 }
